force-app/main/default/objects/GPOS_Variety_Temp__c/GPOS_Variety_Temp__c.object-meta.xml
<CustomObject>
    <label>GPOS Variety Temp</label>
    <nameField>
        <label>GPOS Variety Temp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPOS Variety Temps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>