force-app/main/default/objects/GPOS_Variety_Temp__c/fields/GPOS_Variety_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>GPOS_Variety_Consolidation__c</fullName>
    <label>GPOS Variety Consolidation</label>
    <referenceTo>GPOS_Variety_Consolidation__c</referenceTo>
    <relationshipLabel>GPOS Variety Temps</relationshipLabel>
    <relationshipName>GPOS_Variety_Temps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>