force-app/main/default/objects/GPOS_Variety_Temp__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <label>Trait</label>
    <length>255</length>
    <type>Text</type>
</CustomField>